frontend/test/typecheck/error/add-int-and-float.fc
extern void sink(...);

void foo(int i, float f) {
    sink(i + f);
}
